<resources>
    <string name="app_name">PersonasMaterialDiplomado20181</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_agregar">Agregar Persona</string>
    <string name="titulo_modificar">Modificar Persona</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="mensaje_guardado">Persona Guardada Exitosamente</string>
    <string name="datos">Datos de la Persona</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mensaje_eliminar">¿Está seguro que desea eliminar a esta persona?</string>
    <string name="eliminar_si">Si</string>
    <string name="eliminar_no">No</string>
    <string name="mensaje_error_cedula_existente">La cédula ya se encuentra registrada</string>
    <string name="mensaje_modificar">Persona Modificada Exitosamente</string>
    <string name="mensaje_seleccion_foto">Seleccione la foto</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Ingresar">Ingresar</string>
    <string name="crear">Crear</string>
    <string name="email">Email</string>
    <string name="mensaje_usuario_creado">Usuario creado exitosamente!</string>
    <string name="principal">Principal</string>
    <string name="salir">Salir</string>
    <string name="abrir">Abrir</string>
    <string name="cerar">Cerar</string>
</resources>
